8151170: WINDOW_MODAL dialog does not popup when restoring iconified owner window, which causes application freeze

Reviewed-by: kcr